tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float32_2D_tensor_broadcasting_zeroPoint_and_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 2D tensor broadcasting zeroPoint and scale, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[2, 2];
  }

  consts {
    operand_1: f32[1, 1] @bytes([79, 125, 21, 65]);
    operand_2: u8[1, 1] @bytes([128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
