tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float32_2D_tensor_with_int4_zeroPoint_which_has_even_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 2D tensor with int4 zeroPoint which has even size, litert
 Failed to build graph: unsupported element type: Int4

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[3, 2];
  }

  consts {
    operand_1: f32[1, 2] @bytes([42, 101, 143, 63, 149, 178, 7, 64]);
    operand_2: i4[1, 2] @bytes([186]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
