tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float32_4D_tensor_broadcasting_scale_and_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 4D tensor broadcasting scale and zeroPoint, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[1, 1, 2, 2];
  }

  consts {
    operand_1: f32[1, 1, 2, 1] @bytes([43, 101, 143, 62, 41, 191, 147, 64]);
    operand_2: u8[1, 1, 2, 1] @bytes([128, 128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
