tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float32_tensor_with_int4_zeroPoint_which_has_odd_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 tensor with int4 zeroPoint which has odd size, litert
 Failed to build graph: unsupported element type: Int4

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[];
  }

  consts {
    operand_1: f32[] @bytes([42, 101, 143, 63]);
    operand_2: i4[] @bytes([12]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
