tests/snapshots/run_wpt_conformance__litert_quantizeLinear_float32_tensor_with_uint4_zeroPoint_which_has_even_size.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js quantizeLinear float32 tensor with uint4 zeroPoint which has even size, litert
 Failed to convert graph: Backend Litert does not support data type Uint4

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[2];
  }

  consts {
    operand_1: f32[2] @bytes([42, 101, 143, 63, 42, 101, 143, 63]);
    operand_2: u4[2] @bytes([81]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
