tests/snapshots/run_wpt_conformance__litert_quantized_argMax.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized argMax, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: QuantizeLinear { input: 0, scale: 1, zero_point: Some(2), options: Some(MLOperatorOptions { label: "" }), outputs: [5] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[2, 3];
  }

  consts {
    operand_1: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_2: i8[1, 1] @bytes([128]);
    operand_3: f32[1] @bytes([224, 169, 175, 62]);
    operand_4: i8[1] @bytes([128]);
  }

  nodes {
    [operand_5] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_6] = dequantizeLinear(operand_5, operand_1, operand_2, label="");
    [output] = argMax(operand_6, keepDimensions=false, label="", outputDataType="int32");
  }

  outputs { output; }
}
